# ClowCards-Haskell

./: .gitignore  LICENSE.txt  README.md  Setup.hs  bower.json  clean.sh  clowcards.cabal  gulpfile.js  launch.sh  package.json
src/: Main.hs
src/client/html/: main.html
src/client/js/: AppState.purs  ArrayOps.js  ArrayOps.purs  CardIterator.purs  Cards.purs  Element.js  Element.purs  IndexOps.js  IndexOps.purs  JQueryUI.js  JQueryUI.purs  Main.purs  StringUtils.purs  index.purs
src/server/: Main.hs
